fix body width and change $pageMargin
-	modified:   assets/css/layouts/_body.scss
    (remove `width:100vh` as it make an horizontal scrollbar appears)
-	modified:   assets/css/utilities/_variables.scss
    (modify `$pageMargin` to be a bit bigger)

--- a/assets/css/main_style.css
+++ b/assets/css/main_style.css
@@ -178,7 +178,6 @@ body {
 /* =========================================== */
 body {
   height: 100vh;
-  width: 100vw;
   display: -ms-grid;
   display: grid;
   -ms-grid-rows: auto 1fr auto;
@@ -186,8 +185,8 @@ body {
 }
 
 .pageMargin {
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 /* =========================================== */
@@ -252,7 +251,7 @@ footer {
 }
 
 .album {
-  margin: 0 1rem;
+  margin: 0 1.5rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -423,7 +422,7 @@ footer {
 }
 
 .songs {
-  margin: 2rem 1rem;
+  margin: 2rem 1.5rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -745,7 +744,7 @@ footer {
 @media screen and (min-width: 767.9px) {
   .contact {
     width: 100%;
-    padding: 3rem 1rem;
+    padding: 3rem 1.5rem;
   }
 }
 
@@ -833,7 +832,7 @@ footer {
 }
 
 .musiciens {
-  margin: 0 1rem;
+  margin: 0 1.5rem;
   color: var(--theme-color_neutral);
 }
 
@@ -983,7 +982,7 @@ footer {
 }
 
 .mentions-legales {
-  margin: 0 1rem;
+  margin: 0 1.5rem;
 }
 
 .mentions-legales .mentions-legales-text {
@@ -993,7 +992,7 @@ footer {
 }
 
 .sitemap {
-  margin: 2rem 1rem;
+  margin: 2rem 1.5rem;
   line-height: 1.5;
   color: var(--theme-color_neutral);
 }
@@ -1936,7 +1935,7 @@ footer {
 }
 
 .section {
-  margin: 2rem 1rem;
+  margin: 2rem 1.5rem;
 }
 
 .section .section-title {
